# simulatro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: balatro.h  balatro_core.h  balatro_ids.h
python/simulatro/: __init__.py  _structs.py  core.py
python_tests/: test_balatrobot_bridge.py  test_heuristic_live.py  test_public_observation.py
src/: balatro.c  consumables.c  content.h  content_generated.c  economy.c  internal.h  legal.c  observe.c  packs.c  poker.c  rng.c  scoring.c  shop.c  state.c  step.c
tests/: test_core.c
tools/: balatrobot_bridge.py  benchmark.c  capture_run.py  generate_ctypes.py  heuristic_baseline.py  puffer_validation.py
